# xLearn_ml-latest

./: .gitignore  .gitmodules  10m.json  README.md  eval.py  gen_user_pred.py  latest.json  ml_encoderer.json  predict.py  pyproject.toml  requirements.txt  run.sh  run_100k.sh  run_10m.sh  run_1m.sh  run_latest.sh  split.py  t1.txt  t2.txt  test.json  tmp.test  to_xlearn.py  train_predict.py
.ipynb_checkpoints/: ml_encoderer-checkpoint.json
notebook/: FastFM.ipynb  LightFM.ipynb  Sparse_matrix.ipynb  Suprise.ipynb  Xlearn.ipynb
notebook/.ipynb_checkpoints/: LightFM-checkpoint.ipynb  Suprise-checkpoint.ipynb  Xlearn-checkpoint.ipynb
script/: gen_user_pred.py  run.sh  split.py
