[tool.poetry]
name = "xlearn_ml-latest"
version = "0.1.0"
description = "using Encoderder to experienment the result on movielens dataset"
authors = ["Leon <king0980692@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7,<3.10"
tqdm = "^4.62.3"
scipy = "^1.7.1"
numpy = "^1.21.3"
xlearn = "^0.40a1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
